--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Using timedelta in Python
 hero_image: images/banner.png
-description: Calcualte time differences with timedelta
+description: Calculate time differences with timedelta
 original_url: 
 theme: red # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
 duration: 1 # possible values: 1, 2 or 3
@@ -12,5 +12,5 @@ interests:
 technologies: "python"
 site_areas:
 steps:
-  - title: timedelta
+  - title: timedelta objects
 
